updated to include an implementation of fib in scheme

--- a/todo.txt
+++ b/todo.txt
@@ -1,34 +1,12 @@
 TODO.txt
 
+* Fix the debug statements?
 * bracket matching in the text input does not work, and its hard to do
 * missing values are hard to debug [for example (define (lambda (x) (+ 10 x))) is missing the variable to define. It does not throw a useful error message] 
-
-
-
-
-
-
-# on even numbers it will recurse infinitely
-
-( begin
- ( define fib
-  ( lambda
-   ( a)
-   ( if
-    ( == a 0) 0
-    ( if
-     ( == 1 a) 1
-     ( +
-      ( fib
-       ( - a 2))
-      ( fib
-       ( - a 1)))))))
- ( fib 10)
-)
-
+* More environment functions
+* Lispy2 functionality
 
 # actual scheme that works
-
 ( begin
  ( define fib
   ( lambda
